--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+/* html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -15,7 +15,8 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video */
+*{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -185,4 +186,42 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em
 }
+
+/* CSS rajouté */
+.filters {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	margin-bottom: 50px;
+	margin-top: 50px;
+}
+
+.filters button {
+	border: 1px solid #1D6154;
+	border-radius: 20px;
+	background-color: white;
+	padding-top: 9px;
+	padding-bottom: 9px;
+	padding-left: 10px;
+	padding-right: 10px;
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 16px;
+	color: #1D6154;
+	min-width: 100px;
+}
+
+.filters button:hover {
+	background-color: #1D6154;
+	color: white;
+}
+
+
+.gallery figcaption {
+	font-size: 13px;
+	font-weight: 400;
+	color: #3D3D3D;
+	margin-top: 7px;
+}
+
 
