--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -9,21 +9,7 @@
     --main-h1-color: #B1663C;
 }
 
-
-/* html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video */
-*{
+* {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -31,6 +17,7 @@ time, mark, audio, video */
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -39,51 +26,43 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /** end reset css**/
 body {
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* align-items: center; */
 	max-width: 1140px;
+	padding-left:30px;
+	padding-right:30px;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	min-height: 100vh;
 }
-header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
-}
+
 section {
 	margin: 50px 0
-}
-
-h1{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Syne';
-	font-size: 22px;
-	font-weight: 800;
-	color: var(--main-h1-color);
-}
-
-h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
-;
 }
 
 h2{
@@ -92,27 +71,16 @@ h2{
 	font-size: 30px;
 	color: var(--main-color);
 }
-nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
 
-}
-nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
-}
-
-li:hover {
-	color: var(--main-h1-color);
-}
 #introduction {
 	display: flex;
 	align-items: center;
 }
+
 #introduction figure {
 	flex: 1
 }
+
 #introduction img {
 	display: block;
 	margin: auto;
@@ -122,6 +90,7 @@ li:hover {
 #introduction article {
 	flex: 1
 }
+
 #introduction h2 {
 	margin-bottom: 1em;
 }
@@ -129,10 +98,12 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -143,41 +114,47 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
 }
-#contact {
+
+/* FORMULAIRES */
+#contact, #logIn {
 	width: 50%;
-margin: auto;
-}
-#contact > * {
+	margin: auto;
 	text-align: center;
-
 }
-#contact h2{
+
+#contact, #logIn > * {
+	text-align: center;
+}
+
+#contact h2, #logIn h2{
 	margin-bottom: 20px;
 }
-#contact form {
+
+#contact form, #logIn form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+#contact input, #logIn input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+
+#contact label, #logIn label {
 	margin: 2em 0 1em 0;
 }
+
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+input[type="submit"], input[type="button"]{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -187,49 +164,3 @@ input[type="submit"]{
 	text-align: center;
 	border-radius: 60px ;
 }
-
-footer nav ul {
-	display: flex;
-	justify-content: flex-end;
-	margin: 2em
-}
-
-/* CSS rajouté */
-
-.filters {
-	display: flex;
-	justify-content: center;
-	gap: 10px;
-	margin-bottom: 50px;
-	margin-top: 50px;
-}
-
-.filters button {
-	border: 1px solid var(--main-color);
-	border-radius: 20px;
-	background-color: white;
-	padding-top: 9px;
-	padding-bottom: 9px;
-	padding-left: 10px;
-	padding-right: 10px;
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 16px;
-	color: var(--main-color);
-	min-width: 100px;
-}
-
-.filters button:hover {
-	background-color: var(--main-color);
-	color: white;
-}
-
-
-.gallery figcaption {
-	font-size: 13px;
-	font-weight: 400;
-	color: #3D3D3D;
-	margin-top: 7px;
-}
-
-
