--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -99,7 +99,7 @@ h2{
 	margin-bottom: 0.5em;
 }
 
-.gallery {
+.gallery{
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -107,7 +107,7 @@ h2{
 	grid-row-gap: 20px;
 }
 
-.gallery img {
+.gallery img{
 	width: 100%;
 }
 
@@ -158,4 +158,6 @@ input[type="submit"], input[type="button"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
