--- a/FrontEnd/assets/css/modal.css
+++ b/FrontEnd/assets/css/modal.css
@@ -1,15 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-#btn-xmark-close{
-    background-color: white;
-    width: 100%;
-    border: none;
-    text-align: right;
-}
-
+/******************************/
+/*** AFFICHAGE DE LA MODALE ***/
+/******************************/
 .modal-wrapper {
 	overflow: auto; /* une scroll barre apparaît si le contenu déborde */
 	width: 50%;
@@ -33,13 +24,40 @@
 	left:0;
 	width:100%;
 	height: 100%;
-	background: rgba(0, 0 ,0 , 0.8);
+	background: rgba(0, 0 ,0 , 0.3);
+}
+
+/******************************/
+/**** CONTENU DE LA MODALE ****/
+/******************************/
+
+/* CSS en commun */
+#galleryView, #addPhotoView {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
+.icone-modal {
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	width: 100%;
+}
+
+#btn-xmark-close, #prevBtn-photoView{
+    background-color: white;
+    border: none;
 }
 
 #title-modal {
-    color : black;  
+    color : black;
+	text-align: center;  
 }
 
+/* CSS de la partie Galerie photo */
 .modal-photos {
 	position: relative;
 	margin-top: 20px;
@@ -51,8 +69,6 @@
 .modal-photos div {
 	width: 100%;
 	position: relative;
-	/* display: inline-block; */
-	border: 1px solid red;
 }
 
 .modal-photos img {
@@ -73,4 +89,47 @@
     padding: 0.5em;
     text-align: center;
     cursor: pointer;
+}
+
+/* CSS de la partie Ajouter photo */
+.modal-form {
+	display: flex;
+	flex-direction: column;
+	margin-top: 15px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
+.custom-file-upload {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--modal-addPhoto-backgroung);
+	border-radius: 5px;
+	margin-bottom: 15px;
+}
+
+.custom-file-upload input[type="file"] {
+	display: none;
+}
+
+.fa-image {
+	font-size: 5em;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	color: var(--modal-addPhoto-color-icone);
+}
+
+.modal-form-txt {
+	padding: 5px;
+	border-radius: 10px;
+	background-color: var(--modal-addPhoto-color-icone);
+	color: var(--modal-addPhoto-color-txt);
+}
+
+.modal-form-txtFormat {
+	font-size: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
