--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -65,6 +65,26 @@ table {
 }
 
 /**************************/
+/****** MISE EN PAGE ******/
+/**************************/
+
+body {
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+	max-width: 1440px;
+	margin:auto;
+	font-family: 'Work Sans' ;
+	font-size: 14px;
+	min-height: 100vh;
+	background-color: var(--main-background-color);
+}
+
+p {
+	color:var(--second-txt-color);
+}
+
+/**************************/
 /******* LES TITRES *******/
 /**************************/
 
@@ -103,13 +123,9 @@ h2{
 	text-align: center;
 }
 
-#contact h2, #logIn h2{
-	margin-bottom: 20px;
-}
-
 form {
 	text-align: left;
-	margin-top:30px;
+	/* margin-top:30px; */
 	display: flex;
 	flex-direction: column;
     width: 380px;
@@ -124,6 +140,10 @@ input {
 
 label {
 	margin: 2em 0 1em 0;
+	font-weight: 500;
+	color:var(--second-txt-color);
+	margin-top: 40px;
+	margin-bottom: 6px;
 }
 
 textarea {
@@ -171,22 +191,6 @@ a:visited, a:active {
 }
 
 /**************************/
-/****** MISE EN PAGE ******/
-/**************************/
-
-body {
-	display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-	max-width: 1440px;
-	margin:auto;
-	font-family: 'Work Sans' ;
-	font-size: 14px;
-	min-height: 100vh;
-	background-color: var(--main-background-color);
-}
-
-/**************************/
 /********* HEADER *********/
 /**************************/
 
@@ -220,6 +224,7 @@ li:hover {
 footer {
 	width: 100%;
 	height: 50px;
+	font-weight: 300;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
