--- a/FrontEnd/assets/css/index.css
+++ b/FrontEnd/assets/css/index.css
@@ -19,8 +19,7 @@ section {
 	flex-direction: column;
 	justify-content: center;
 	padding-left: 72px;
-	max-width: 50%;
-	
+	max-width: 42%;
 }
 
 #introduction h2 {
@@ -96,4 +95,8 @@ section {
 
 .projets-edit i {
 	padding-right: 10px;
+}
+
+#contact p {
+	margin-top: 9px;
 }
