--- a/FrontEnd/assets/css/index.css
+++ b/FrontEnd/assets/css/index.css
@@ -1,28 +1,23 @@
-/* section {
-	margin-left:245px;
-	margin-right:245px;
-} */
-
 #introduction, #portfolio {
 	max-width: 950px;
 	margin-left:245px;
 	margin-right:245px;
 	margin: auto;
+	display: flex;
 }
 
 #introduction {
-	display: flex;
-	justify-content: center;
-	gap:72px;
-	margin-top: 150px;
-	margin-bottom: 150px;
-	
+	/* gap:72px; */
+	margin: 139px 0px;
+	height: 355px;
 }
 
 #introduction img {
 	height: 355px;
-	/* max-width: 474px; */
+	max-width: 474px;
+	margin-right: 72px;
 }
+
 
 #introduction article {
 	display: flex;
@@ -35,6 +30,36 @@
 	margin-bottom: 1em;
 }
 
+#portfolio {
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 57px;
+	flex-direction: column;
+}
+
+#portfolioTitle {
+	display: flex;
+	align-items: center;
+	position: relative;
+}
+
+#link-edit .fa-pen-to-square {
+	font-size: 15.58px;
+	color: black;
+}
+
+#link-edit {
+	position: absolute;
+	color: black;
+	gap:12px;
+	font-family: "Work Sans";
+	font-size: 14px;
+	display: flex;
+	align-items: flex-end;
+	line-height: 0.6;
+	margin-left: 221px;
+}
+
 .gallery {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -42,30 +67,27 @@
 	grid-row-gap: 17px;
 }
 
-#portfolio {
-	margin-bottom: 55px;
-}
-
 .filters {
 	display: flex;
 	justify-content: center;
+	margin: auto;
 	gap: 10px;
-	margin-bottom: 50px;
-	margin-top: 50px;
+	margin-bottom: 51px;
+	margin-top: 51px;
+	width: 585px;
 }
 
 .filters button {
 	border: 1px solid var(--main-color);
-	border-radius: 20px;
 	background-color: var(--main-background-color);
+	color: var(--main-color);
+	border-radius: 60px;
 	padding-top: 9px;
 	padding-bottom: 9px;
 	padding-left: 10px;
 	padding-right: 10px;
 	font-family: 'Syne';
-	font-weight: 700;
 	font-size: 16px;
-	color: var(--main-color);
 	min-width: 100px;
 }
 
@@ -81,31 +103,6 @@
 	margin-top: 7px;
 }
 
-.projets-title {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 20px;
-}
-
-.title {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.projets-edit {
-	padding-left: 15px;
-}
-
-.projets-edit a {
-	padding-left: 15px;
-}
-
-.projets-edit i {
-	padding-right: 10px;
-}
-
 #contact p {
 	margin-top: 9px;
 }
@@ -117,14 +114,12 @@
 @media (max-width: 1024px) {
 	/* Enlever les margin et padding sur les bords */
 	#introduction {
-		/* display: flex;
-		justify-content: center;
-		gap:50px;
-		margin-top: 150px;
-		margin-bottom: 150px; */
-		padding-left: 5px;
-		padding-right: 5px;
-		gap:10px;
+		gap:20px;
+		margin: 100px 0px;
+	}
+	.gallery {
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 }
 
@@ -134,16 +129,18 @@
 	#introduction {
 		flex-direction: column;
 		align-items: center;
-		width: 100%;
-		gap:30px;
+		gap:22px;
+		height: auto;
+		margin: 38px 0px;
 	}
 
 	#introduction article {
-		max-width: 90%;
+		max-width: 100%;
 	}
 
 	#introduction img {
-		height: 200px;
+		max-height: 480px;
+		margin: 0px;
 	}
 
 	.filters {
@@ -153,17 +150,34 @@
 	.filters button {
 		width: 60%;
 	}
-	
-	#portfolio {
-		padding-left: 5px;
-		padding-right: 5px;;
-	}
 
 	.gallery {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-column-gap: 5px;
 		grid-row-gap: 5px;
+		padding-left: 0px;
+		padding-right: 0px;
 	}
-	/* Soit mettre aricle au dessus ou en dessous de la photo, soit cacher photo*/
+
+	#link-edit {
+		margin-left: 150px;
 	}
+}
+@media (max-width: 480px) {
+/* Styles pour les petits écrans */
+	#introduction img {
+		width: 100%;
+	}
+
+	#link-edit {
+		gap:6px;
+		margin-left: 130px;
+	}
+
+	.gallery {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-row-gap: 42px;
+	}
+}
