--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -63,6 +63,8 @@ table {
     --modal-addPhoto-color-icone:#CBD6DC;
     --modal-addPhoto-color-txt:#306685;
 	--modal-bar-color: #B3B3B3;
+	--modal-addPhoto-color-txtAddPhoto: #306685;
+	--modal-addPhoto-color-btnSendNoValid: #A7A7A7;
 }
 
 /**************************/
@@ -75,7 +77,6 @@ body {
     justify-content: space-between;
 	align-items: center;
 	box-sizing: border-box;
-	/* max-width: 1440px; */
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
@@ -130,12 +131,24 @@ form {
 	align-items: center;
 }
 
-input {
+input, select {
 	width: 100%;
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding: 0;
+	color: var(--second-txt-color);
+}
+
+input:focus, select:focus {
+	/*outline: none;*/  /* Supprime la bordure de focus, je la garde pour l'accessibilité */
+	border: none;   /* Supprime la bordure normale (facultatif si tu veux enlever la bordure complètement) */
+  }
+  
+
+select {
+	margin-top: 11px;
 }
 
 label {
@@ -219,7 +232,7 @@ header {
 .header-global {
 	display: flex;
 	justify-content: space-between;
-	max-width: 1440px;
+	max-width: 1140px;
 	width: 100%;
 	margin-top: 50px;
 	height: 42px;
@@ -232,7 +245,7 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	margin-left: 150px;
+	margin-left: 5px;
 }
 
 /* Style du titre */
@@ -256,7 +269,7 @@ h1 > span {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-right: 150px;
+	margin-right: 5px;
 }
 
 .logo-social a{
@@ -344,14 +357,6 @@ footer ul {
 /* Menu humburger à gauche du titre h1 et logo réseaux sociaux à droite */
 /* Affichage du menu hamburger sur les petits écrans (moins de 1024px) */
 @media (max-width: 1024px) {
-
-	.header-titre-menu {
-		margin-left: 60px;
-	}
-
-	.logo-social {
-		margin-right: 60px;
-	}
 
 	h1 {
 		font-size: 18px;
