--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -337,12 +337,38 @@ footer {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	border: 1px	solid	green;
 }
 
 footer ul {
 	max-width: 1440px;
 	margin-right: 107px;
+}
+
+/*****************************/
+/********* ERROR BOX *********/
+/*****************************/
+
+.messageError {
+	box-sizing: border-box;
+	display: none; /*flex si actif*/
+	background-color: #ff8b8b;
+	height: 75px;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 5px;
+	margin-top: 20px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+#exclamationError {
+	border: 1px solid var(--second-txt-color);
+	border-radius: 50%;
+	padding: 10px;
+	font-size: 22px;
+	width: 16px;
+	height: 16px;
 }
 
 /******************************/
