1er version en responsive fonctionnelle

--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -432,7 +432,7 @@ footer ul {
         position: absolute;
         top: 150px;
         left: 55px;
-        width: 100%;
+        width: 250px;
     }
 }
 
