--- a/FrontEnd/partials/header.html
+++ b/FrontEnd/partials/header.html
@@ -9,7 +9,7 @@
                 <div class="bar"></div>
             </div>
             <ul>
-                <li><a href="index.html">projets</a></li>
+                <li id="btn-projets"><a href="index.html">projets</a></li>
                 <li><a href="#">contact</a></li>
                 <li id="btn-login"><a href="login.html">login</a></li>
                 <li id="btn-logout" style="display: none;"><a href="#">logout</a></li>
