--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -155,6 +155,7 @@ label {
 	font-weight: 500;
 	color:var(--second-txt-color);
 	width: 100%;
+	text-align: left;
 
 }
 
@@ -456,5 +457,9 @@ footer ul {
 
 	h2 {
 		font-size: 18px;
+	}
+
+	main {
+		width: 100%;
 	}
 }
