--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -131,6 +131,10 @@ form {
 	align-items: center;
 }
 
+.form-link {
+	text-decoration: underline;
+}
+
 input, select {
 	width: 100%;
 	height: 50px;
@@ -144,7 +148,7 @@ input, select {
 input:focus, select:focus {
 	/*outline: none;*/  /* Supprime la bordure de focus, je la garde pour l'accessibilité */
 	border: none;   /* Supprime la bordure normale (facultatif si tu veux enlever la bordure complètement) */
-  }
+}
   
 
 select {
@@ -206,6 +210,8 @@ a:hover {
 a:visited, a:active {
     color: inherit;
 }
+
+
 
 /**************************/
 /********* HEADER *********/
