--- a/FrontEnd/partials/modal.html
+++ b/FrontEnd/partials/modal.html
@@ -60,7 +60,7 @@
                          </label>
         
                         <label for="title">Titre</label>
-                        <input type="text" id="title" name="title" required/>
+                        <input type="text" id="title" name="title" pattern="^[a-zA-Z0-9À-ÿ\s]{1,63}$" required/>
     
                         <label for="category">Catégorie</label>
                         <select id="category" name="category" required>
