Menu burger fait

--- a/FrontEnd/partials/header.html
+++ b/FrontEnd/partials/header.html
@@ -1,13 +1,24 @@
 <div id="edit-header" style="display: none;"><i class="fa-regular fa-pen-to-square"></i>Mode édition</div>
+<div class="side-menu" >
+    <nav class="side-menu-nav">
+        <button class="side-menu-close"><i class="fa-solid fa-xmark"></i></button>
+        <ul>
+            <li id="sideMenuProjets"><a href="index.html">projets</a></li>
+            <li><a href="#">contact</a></li>
+            <li id="sideMenuLogin"><a href="login.html">login</a></li>
+            <li id="sideMenuLogout" style="display: none;"><a href="#">logout</a></li>
+        </ul>
+    </nav>
+</div>
 <div class="header-global">
     <div class="header-titre-menu">
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <div class="menu-toggle" id="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <nav>
-            <div class="menu-toggle" id="menu-toggle">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
             <ul>
                 <li id="btn-projets"><a href="index.html">projets</a></li>
                 <li><a href="#">contact</a></li>
@@ -20,4 +31,3 @@
         <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
     </div>
 </div>
-
