--- a/FrontEnd/assets/css/global.css
+++ b/FrontEnd/assets/css/global.css
@@ -49,6 +49,11 @@ table {
 }
 /** end reset css **/
 
+/* ANIMATION */
+@keyframes slideFromRight {
+	from { transform: translateX(-200px); }
+	to { transform: translateX(0px); }
+}
 
 /**************************/
 /****** LES COULEURS ******/
@@ -247,7 +252,14 @@ header {
 	margin-top: 50px;
 	height: 42px;
 	gap:47px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
+
+.header-global nav{
+	display: flex;
+}
+
 
 .header-titre-menu {
 	width: 100%;
@@ -256,6 +268,30 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	margin-left: 5px;
+}
+
+/* Style du menu de navigation */
+nav ul {
+	display: flex;
+	align-items: center;
+	list-style-type: none;
+}
+
+nav ul li {
+	font-size: 19px;
+}
+
+nav ul li+li {
+	margin-left: 41px; /* Écart par défaut entre chaque li */
+}
+
+/* Ajustement spécifique entre "contact" et "login/logout" */
+#btn-login, #btn-logout {
+    margin-left: 44px; /* Spécifie l'écart plus grand ici */
+}
+
+li:hover {
+	color: var(--main-h1-color);
 }
 
 /* Style du titre */
@@ -295,44 +331,73 @@ h1 > span {
 
 /* Menu toggle - Hamburger */
 .menu-toggle {
-    display: none;
-    flex-direction: column;
+    display: none; 
     cursor: pointer;
-    margin-right: 20px;
-	padding: 15px;
-	border-radius: 50%;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 25px;
+    width: 30px;
 }
 
 .menu-toggle .bar {
-    height: 4px;
-    width: 25px;
     background-color: black;
-    margin: 3px 0;
-    border-radius: 2px;
+    height: 3px;
+    width: 100%;
+    margin: 4px 0;
+    transition: all 0.3s ease;
 }
 
-/* Style du menu de navigation */
-nav ul {
+/* Menu caché par défaut sur mobile */
+.side-menu {
+    display: none;
+    position: fixed;
+	opacity: 90%;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 200px;
+    background-color: #333;
+}
+
+.side-menu-close{
+	width: 100%;
+	text-align: right;
+	background-color: #333;
+	border: none;
+	color: white;
+	font-size: 22px;
+	margin-bottom: 100px;
+	padding: 15px;
+}
+
+.side-menu nav {
+width: 100%;
+}
+
+.side-menu-nav ul{
+	margin: 0;
+	padding: 0;
 	display: flex;
+	flex-direction: column;
+	width: 100%;
+	justify-content: center;
 	align-items: center;
-	list-style-type: none;
+	gap: 40px;
 }
 
-nav ul li {
-	font-size: 19px;
+.side-menu-nav li{
+	margin: 0;
+	padding: 0;
+	color: white;
 }
 
-nav ul li+li {
-	margin-left: 41px; /* Écart par défaut entre chaque li */
-}
-
-/* Ajustement spécifique entre "contact" et "login/logout" */
-#btn-login, #btn-logout {
-    margin-left: 44px; /* Spécifie l'écart plus grand ici */
-}
-
-li:hover {
-	color: var(--main-h1-color);
+.header-global nav ul.open {
+    list-style-type: none;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+    padding: 0;
 }
 
 /**************************/
@@ -340,7 +405,6 @@ li:hover {
 /**************************/
 
 footer {
-	/* display: flex; */
 	width: 100%;
 	height: 60px;
 	background-color: white;
@@ -390,8 +454,6 @@ footer ul {
 /**************************/
 /********* HEADER *********/
 /**************************/
-/* Menu humburger à gauche du titre h1 et logo réseaux sociaux à droite */
-/* Affichage du menu hamburger sur les petits écrans (moins de 1024px) */
 @media (max-width: 1024px) {
 
 	h1 {
@@ -403,7 +465,11 @@ footer ul {
 }
 
 @media (max-width: 768px) {
-/* Enlever les margin et padding sur les bords */
+	main {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
 	h2 {
 		text-align: center;
 	}
@@ -415,35 +481,19 @@ footer ul {
 	.logo-social {
 		margin-right: 0px;
 	}
+	.menu-toggle {
+        display: flex; 
+    }
 
-	/* Réorganisation du titre et du menu */
-	.header-titre-menu {
-		flex-direction: row-reverse;
-		justify-content: left;
-		margin-left: 0px;
+	.header-titre-menu nav {
+		display: none;
 	}
 
-	nav ul {
-		display: none;
-	} 
+	.side-menu.open {
+		display:flex;
+		animation: slideFromRight .2s both;
+	}
 
-    .menu-toggle {
-        display: flex;
-    }
-
-	.menu-toggle:hover{
-		background-color: var(--modal-addPhoto-color-icone);
-    }
-
-    /* Réaffichage du menu au clic */
-    nav ul.show {
-        display: flex;
-        flex-direction: row;
-        position: absolute;
-        top: 150px;
-        left: 55px;
-        width: 250px;
-    }
 }
 
 @media (max-width: 480px) {
@@ -466,9 +516,5 @@ footer ul {
 
 	h2 {
 		font-size: 18px;
-	}
-
-	main {
-		width: 100%;
 	}
 }
