--- a/FrontEnd/assets/css/index.css
+++ b/FrontEnd/assets/css/index.css
@@ -119,6 +119,8 @@
 	#introduction {
 		gap:20px;
 		margin: 100px 0px;
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 	.gallery {
 		padding-left: 20px;
@@ -151,7 +153,7 @@
 	}
 
 	.filters button {
-		width: 60%;
+		width: 420px;
 	}
 
 	.gallery {
@@ -182,5 +184,9 @@
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-row-gap: 42px;
+	}
+
+	.filters button {
+		width: 100%;
 	}
 }
