--- a/FrontEnd/partials/modal.html
+++ b/FrontEnd/partials/modal.html
@@ -11,12 +11,12 @@
 	<link rel="stylesheet" href="./assets/css/global.css">
 	<link rel="stylesheet" href="./assets/css/modal.css">
 	<script src="https://kit.fontawesome.com/5d6dcc7e2f.js" crossorigin="anonymous"></script>
-	<script type="module" src="./assets/script/modal/modal.js" defer></script>
+	<script type="module" src="./assets/script/modal/modal.js"></script>
 </head>
 
 <body>
     <main>
-        <aside id="modal1" class="modal" role="dialog" aria-labelledby="title-modal" aria-hidden="true">
+        <aside id="modal1" class="modal" role="dialog" aria-labelledby="titlemodal">
             <div class="modal-wrapper js-modal-stop">
         
                 <div id="modalNav" class="icone-modal-deleteView">
